force-app/main/default/objects/Case/fields/Actual_Effort__c.field-meta.xml
<CustomField>
    <fullName>Actual_Effort__c</fullName>
    <label>Actual Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>