force-app/main/default/objects/Case/fields/Annoucement_sent__c.field-meta.xml
<CustomField>
    <fullName>Annoucement_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Product Owner select this field when she/he comunicated the changes to Team.</description>
    <label>Announcement sent</label>
    <type>Checkbox</type>
</CustomField>