force-app/main/default/objects/Case/fields/Aprobacion_cliente__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobación cliente</label>
    <type>Checkbox</type>
</CustomField>