force-app/main/default/objects/Case/fields/Aprobacion_tecnica__c.field-meta.xml
<CustomField>
    <fullName>Aprobacion_tecnica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprobación técnica</label>
    <type>Checkbox</type>
</CustomField>