force-app/main/default/objects/Case/fields/Asignacion_Completa__c.field-meta.xml
<CustomField>
    <fullName>Asignacion_Completa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controla el cumplimiento del evento clave Asignación.</description>
    <label>Asignacion_Completa</label>
    <type>Checkbox</type>
</CustomField>