force-app/main/default/objects/Case/fields/Attached_documentation__c.field-meta.xml
<CustomField>
    <fullName>Attached_documentation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attached Documentation</label>
    <type>Checkbox</type>
</CustomField>