force-app/main/default/objects/Case/fields/Business_Line__c.field-meta.xml
<CustomField>
    <fullName>Business_Line__c</fullName>
    <label>Business Line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Iodine</fullName>
            </value>
            <value>
                <fullName>Li2CO3</fullName>
            </value>
            <value>
                <fullName>LiOH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>