force-app/main/default/objects/Case/fields/Cantidad_Afectada__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_Afectada__c</fullName>
    <inlineHelpText>The unit of measure is MT</inlineHelpText>
    <label>Cantidad Afectada</label>
    <precision>13</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>