force-app/main/default/objects/Case/fields/Case_Reason__c.field-meta.xml
<CustomField>
    <fullName>Case_Reason__c</fullName>
    <label>Case Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Subtype__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Broken_bags</fullName>
                <label>Broken bags</label>
            </value>
            <value>
                <fullName>Bad_sealing</fullName>
                <label>Bad sealing</label>
            </value>
            <value>
                <fullName>Wet_bags</fullName>
                <label>Wet bags</label>
            </value>
            <value>
                <fullName>Spilled_product</fullName>
                <label>Spilled product</label>
            </value>
            <value>
                <fullName>Missing_label</fullName>
                <label>Missing label</label>
            </value>
            <value>
                <fullName>Wrong_label</fullName>
                <label>Wrong label</label>
            </value>
            <value>
                <fullName>Broken_pallet</fullName>
                <label>Broken pallet</label>
            </value>
            <value>
                <fullName>Leaning_bag</fullName>
                <label>Leaning bag</label>
            </value>
            <value>
                <fullName>Without_carboard</fullName>
                <label>Without carboard</label>
            </value>
            <value>
                <fullName>Wrapping</fullName>
            </value>
            <value>
                <fullName>Shortage</fullName>
            </value>
            <value>
                <fullName>Caking</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Particle_Size</fullName>
                <label>Particle Size</label>
            </value>
            <value>
                <fullName>Color</fullName>
            </value>
            <value>
                <fullName>Density</fullName>
            </value>
            <value>
                <fullName>Foreign_substance</fullName>
                <label>Foreign substance</label>
            </value>
            <value>
                <fullName>Out_of_Specs</fullName>
                <label>Out of Specs</label>
            </value>
            <value>
                <fullName>Moisture</fullName>
            </value>
            <value>
                <fullName>Solubility</fullName>
            </value>
            <value>
                <fullName>Wrong_product</fullName>
                <label>Wrong product</label>
            </value>
            <value>
                <fullName>Wrong_quantity</fullName>
                <label>Wrong quantity</label>
            </value>
            <value>
                <fullName>Non FIFO Shipment</fullName>
            </value>
            <value>
                <fullName>Damage_container</fullName>
                <label>Damage container</label>
            </value>
            <value>
                <fullName>Delivery_delays</fullName>
                <label>Delivery delays</label>
            </value>
            <value>
                <fullName>Certificate of Analysis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>