force-app/main/default/objects/Case/fields/Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Ciudad__c</fullName>
    <inlineHelpText>Enter your city of residence</inlineHelpText>
    <label>Ciudad</label>
    <length>100</length>
    <type>Text</type>
</CustomField>