force-app/main/default/objects/Case/fields/Claim_Origin__c.field-meta.xml
<CustomField>
    <fullName>Claim_Origin__c</fullName>
    <label>Claim Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Branch office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>