force-app/main/default/objects/Case/fields/Claim_to_Commercial_Office__c.field-meta.xml
<CustomField>
    <fullName>Claim_to_Commercial_Office__c</fullName>
    <label>Claim to Commercial Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SQM-E</fullName>
            </value>
            <value>
                <fullName>SQM-HQ</fullName>
            </value>
            <value>
                <fullName>SQM-JP</fullName>
            </value>
            <value>
                <fullName>SQM-NA</fullName>
            </value>
            <value>
                <fullName>SQM-SH</fullName>
            </value>
            <value>
                <fullName>SQM-MX</fullName>
            </value>
            <value>
                <fullName>SQM-ZA</fullName>
            </value>
            <value>
                <fullName>SQM-KOR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>