force-app/main/default/objects/Case/fields/Commercial_Office__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Office__c</fullName>
    <label>Commercial Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SQM-E</fullName>
            </value>
            <value>
                <fullName>SQM-HQ</fullName>
            </value>
            <value>
                <fullName>SQM-JP</fullName>
            </value>
            <value>
                <fullName>SQM-NA</fullName>
            </value>
            <value>
                <fullName>SQM-SH</fullName>
            </value>
            <value>
                <fullName>SQM-MX</fullName>
            </value>
            <value>
                <fullName>SQM-ZA</fullName>
            </value>
            <value>
                <fullName>SQM-KOR</fullName>
            </value>
            <value>
                <fullName>SQM-I</fullName>
            </value>
            <value>
                <fullName>SQM ASIA</fullName>
                <isActive>false</isActive>
                <label>SQM ASIA</label>
            </value>
            <value>
                <fullName>SQM EU</fullName>
                <isActive>false</isActive>
                <label>SQM EU</label>
            </value>
            <value>
                <fullName>SQM EUROPE</fullName>
                <isActive>false</isActive>
                <label>SQM EUROPE</label>
            </value>
            <value>
                <fullName>SQM LATAM</fullName>
                <isActive>false</isActive>
                <label>SQM LATAM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>