force-app/main/default/objects/Case/fields/Compensacion_Aprobada__c.field-meta.xml
<CustomField>
    <fullName>Compensacion_Aprobada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compensación Aprobada</label>
    <type>Checkbox</type>
</CustomField>