force-app/main/default/objects/Case/fields/Compensation_Verification__c.field-meta.xml
<CustomField>
    <fullName>Compensation_Verification__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirmation and verification of compensation with Client is expected</inlineHelpText>
    <label>Compensation Verification</label>
    <type>Checkbox</type>
</CustomField>