force-app/main/default/objects/Case/fields/Consignee_Information_Email__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Information_Email__c</fullName>
    <label>Consignee Information Email</label>
    <type>Email</type>
</CustomField>