force-app/main/default/objects/Case/fields/Consignee_Information_Name__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Information_Name__c</fullName>
    <label>Consignee Information Name</label>
    <type>TextArea</type>
</CustomField>