force-app/main/default/objects/Case/fields/Consignee_Information_Phone__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Information_Phone__c</fullName>
    <label>Consignee Information Phone</label>
    <type>Phone</type>
</CustomField>