force-app/main/default/objects/Case/fields/Costo_Interno__c.field-meta.xml
<CustomField>
    <fullName>Costo_Interno__c</fullName>
    <label>Internal Cost</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>