force-app/main/default/objects/Case/fields/Costo_total__c.field-meta.xml
<CustomField>
    <fullName>Costo_total__c</fullName>
    <formula>Costo_Interno__c  +  Monto_a_Compensar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>