force-app/main/default/objects/Case/fields/Customer_Courier__c.field-meta.xml
<CustomField>
    <fullName>Customer_Courier__c</fullName>
    <label>Customer Courier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>