force-app/main/default/objects/Case/fields/Date_Estimation_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Estimation_Approved__c</fullName>
    <description>saves the date when an estimate is approved</description>
    <label>Date Estimation Approved</label>
    <type>DateTime</type>
</CustomField>