force-app/main/default/objects/Case/fields/Date_Finish_Development__c.field-meta.xml
<CustomField>
    <fullName>Date_Finish_Development__c</fullName>
    <description>date when case is approved at UAT</description>
    <label>Date Finish Development</label>
    <type>DateTime</type>
</CustomField>