force-app/main/default/objects/Case/fields/Date_Key_User_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_Key_User_Approved__c</fullName>
    <description>date when key user approves or rejects the approval request</description>
    <label>Date Key User Approved</label>
    <type>DateTime</type>
</CustomField>