force-app/main/default/objects/Case/fields/Date_Priorization__c.field-meta.xml
<CustomField>
    <fullName>Date_Priorization__c</fullName>
    <description>date when the case is prioritized</description>
    <label>Date Priorization</label>
    <type>DateTime</type>
</CustomField>