force-app/main/default/objects/Case/fields/Date_User_Approved__c.field-meta.xml
<CustomField>
    <fullName>Date_User_Approved__c</fullName>
    <description>date user responds to approval request</description>
    <label>Date User Approved</label>
    <type>DateTime</type>
</CustomField>