force-app/main/default/objects/Case/fields/Datos_de_localidad__c.field-meta.xml
<CustomField>
    <fullName>Datos_de_localidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Datos de localidad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Comunidad</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>