force-app/main/default/objects/Case/fields/Declaro_envio_informe_a_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Declaro_envio_informe_a_Cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declaro envío informe a Cliente</label>
    <type>Checkbox</type>
</CustomField>