force-app/main/default/objects/Case/fields/Delivery_Date_Customer__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Customer__c</fullName>
    <label>Delivery Date Customer</label>
    <type>Date</type>
</CustomField>