force-app/main/default/objects/Case/fields/Delivery_Date_Filial__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Filial__c</fullName>
    <label>Delivery Date Filial</label>
    <type>Date</type>
</CustomField>