force-app/main/default/objects/Case/fields/Delivery_Date_Stgo__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_Stgo__c</fullName>
    <label>Delivery Date Stgo</label>
    <type>Date</type>
</CustomField>