force-app/main/default/objects/Case/fields/DEV_Configurations__c.field-meta.xml
<CustomField>
    <fullName>DEV_Configurations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DEV Configurations</label>
    <type>Checkbox</type>
</CustomField>