force-app/main/default/objects/Case/fields/Development_Duration__c.field-meta.xml
<CustomField>
    <fullName>Development_Duration__c</fullName>
    <formula>(Date_Finish_Development__c - Date_Estimation_Approved__c)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Development Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>