force-app/main/default/objects/Case/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <inlineHelpText>Enter your address</inlineHelpText>
    <label>Dirección</label>
    <type>TextArea</type>
</CustomField>