force-app/main/default/objects/Case/fields/Documento_Aprobado__c.field-meta.xml
<CustomField>
    <fullName>Documento_Aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Documento Aprobado</label>
    <type>Checkbox</type>
</CustomField>