force-app/main/default/objects/Case/fields/Effort_Estimate_Approved__c.field-meta.xml
<CustomField>
    <fullName>Effort_Estimate_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Effort Estimate Approved</label>
    <type>Checkbox</type>
</CustomField>