force-app/main/default/objects/Case/fields/Effort_Estimate_Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>Effort_Estimate_Submitted_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Effort Estimate Submitted for Approval</label>
    <type>Checkbox</type>
</CustomField>