force-app/main/default/objects/Case/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Se usa para identificar la dirección de correo de nuevos usuarios en el tipo de registro &quot;Helpdesk&quot;.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>