force-app/main/default/objects/Case/fields/Faena__c.field-meta.xml
<CustomField>
    <fullName>Faena__c</fullName>
    <label>Faena</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Localidad__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Antofagasta OF.</fullName>
            </value>
            <value>
                <fullName>Coya Sur</fullName>
            </value>
            <value>
                <fullName>María Elena</fullName>
            </value>
            <value>
                <fullName>Nueva Victoria</fullName>
            </value>
            <value>
                <fullName>Pedro de Valdivia</fullName>
            </value>
            <value>
                <fullName>Puerto de Tocopilla</fullName>
            </value>
            <value>
                <fullName>Salar de Atacama</fullName>
            </value>
            <value>
                <fullName>Salar del Carmen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>