force-app/main/default/objects/Case/fields/Fin_delegaci_n__c.field-meta.xml
<CustomField>
    <fullName>Fin_delegaci_n__c</fullName>
    <inlineHelpText>Para categoría Vacaciones, ingrese la fecha de finalización para la delegación de actividades</inlineHelpText>
    <label>Fin delegación</label>
    <type>Date</type>
</CustomField>