force-app/main/default/objects/Case/fields/Final_Customer__c.field-meta.xml
<CustomField>
    <fullName>Final_Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Customer who has the problem. It could be different to Account Name (Customer invoiced).</inlineHelpText>
    <label>Final Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Final Customer)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>