force-app/main/default/objects/Case/fields/First_Name_User__c.field-meta.xml
<CustomField>
    <fullName>First_Name_User__c</fullName>
    <label>First Name User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>