force-app/main/default/objects/Case/fields/Formula_propietario__c.field-meta.xml
<CustomField>
    <fullName>Formula_propietario__c</fullName>
    <formula>IF(AND(NOT(ISBLANK($User.ContactId)),$User.ContactId = ContactId), TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula propietario</label>
    <type>Checkbox</type>
</CustomField>