force-app/main/default/objects/Case/fields/Grado_de_producto__c.field-meta.xml
<CustomField>
    <fullName>Grado_de_producto__c</fullName>
    <label>Grado de producto</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Line__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LHI</fullName>
            </value>
            <value>
                <fullName>CRY8900.00</fullName>
            </value>
            <value>
                <fullName>LHI-W</fullName>
            </value>
            <value>
                <fullName>CRY9000.00</fullName>
            </value>
            <value>
                <fullName>LHT</fullName>
            </value>
            <value>
                <fullName>FIN9000.00</fullName>
            </value>
            <value>
                <fullName>LHT(S)</fullName>
            </value>
            <value>
                <fullName>FIN9001.99</fullName>
            </value>
            <value>
                <fullName>LHT-O</fullName>
            </value>
            <value>
                <fullName>FIN9500.00</fullName>
            </value>
            <value>
                <fullName>LHT-O(S)</fullName>
            </value>
            <value>
                <fullName>MIC8900.00</fullName>
            </value>
            <value>
                <fullName>LHT-B</fullName>
            </value>
            <value>
                <fullName>MIC9000.00</fullName>
            </value>
            <value>
                <fullName>LHR</fullName>
            </value>
            <value>
                <fullName>LHB</fullName>
            </value>
            <value>
                <fullName>LHB-C</fullName>
            </value>
            <value>
                <fullName>LHB-F</fullName>
            </value>
            <value>
                <fullName>LHI-R</fullName>
            </value>
            <value>
                <fullName>LHB-R</fullName>
            </value>
            <value>
                <fullName>IODINE</fullName>
            </value>
            <value>
                <fullName>CRY7000.00</fullName>
            </value>
            <value>
                <fullName>CRY9024.00</fullName>
            </value>
            <value>
                <fullName>CRY8000.00</fullName>
                <isActive>false</isActive>
                <label>CRY8000.00</label>
            </value>
            <value>
                <fullName>MIC10000.00</fullName>
                <isActive>false</isActive>
                <label>MIC10000.00</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>