force-app/main/default/objects/Case/fields/Informe_a_Cliente_Adjunto__c.field-meta.xml
<CustomField>
    <fullName>Informe_a_Cliente_Adjunto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Informe a Cliente Adjunto</label>
    <type>Checkbox</type>
</CustomField>