force-app/main/default/objects/Case/fields/InformeCliente_Completa__c.field-meta.xml
<CustomField>
    <fullName>InformeCliente_Completa__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controla el cumplimiento del evento clave Preparación informe Cliente.</description>
    <label>InformeCliente_Completa</label>
    <type>Checkbox</type>
</CustomField>