force-app/main/default/objects/Case/fields/Informes_de_Investigacion_Aceptados__c.field-meta.xml
<CustomField>
    <fullName>Informes_de_Investigacion_Aceptados__c</fullName>
    <label>Informes de Investigación Aceptados</label>
    <summaryFilterItems>
        <field>Informe_de_Investigacion__c.Etapa__c</field>
        <operation>equals</operation>
        <value>Aceptado</value>
    </summaryFilterItems>
    <summaryForeignKey>Informe_de_Investigacion__c.Caso__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>