force-app/main/default/objects/Case/fields/Ingeniero_de_Calidad__c.field-meta.xml
<CustomField>
    <fullName>Ingeniero_de_Calidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quality Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>