force-app/main/default/objects/Case/fields/Inicio_delegaci_n__c.field-meta.xml
<CustomField>
    <fullName>Inicio_delegaci_n__c</fullName>
    <inlineHelpText>Para categoría Vacaciones, ingrese la fecha de inicio para la delegación de actividades.</inlineHelpText>
    <label>Inicio delegación</label>
    <type>Date</type>
</CustomField>