force-app/main/default/objects/Case/fields/International_Courier__c.field-meta.xml
<CustomField>
    <fullName>International_Courier__c</fullName>
    <description>Company name to send samples to Filial</description>
    <label>International Courier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>