force-app/main/default/objects/Case/fields/Investigacion_Completa__c.field-meta.xml
<CustomField>
    <fullName>Investigacion_Completa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Complete Research</label>
    <type>Checkbox</type>
</CustomField>