force-app/main/default/objects/Case/fields/Is_Priorized__c.field-meta.xml
<CustomField>
    <fullName>Is_Priorized__c</fullName>
    <label>Is Priorized</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>