force-app/main/default/objects/Case/fields/Is_the_Issue_a_Stopper__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Issue_a_Stopper__c</fullName>
    <inlineHelpText>Stopper: it means the issue that not allow doing your habitual activities on Salesforce.</inlineHelpText>
    <label>Is the Issue a Stopper?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Priority</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>