force-app/main/default/objects/Case/fields/Key_User_Approved__c.field-meta.xml
<CustomField>
    <fullName>Key_User_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key User Approved</label>
    <type>Checkbox</type>
</CustomField>