force-app/main/default/objects/Case/fields/Key_User_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>Key_User_Response_Time__c</fullName>
    <formula>(Date_Key_User_Approved__c - CreatedDate)*24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key User Response Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>