force-app/main/default/objects/Case/fields/Last_Name_User__c.field-meta.xml
<CustomField>
    <fullName>Last_Name_User__c</fullName>
    <label>Last Name User</label>
    <length>30</length>
    <type>Text</type>
</CustomField>