force-app/main/default/objects/Case/fields/Localidad__c.field-meta.xml
<CustomField>
    <fullName>Localidad__c</fullName>
    <inlineHelpText>Enter the place associated with the case</inlineHelpText>
    <label>Localidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alto Hospicio</fullName>
            </value>
            <value>
                <fullName>Antofagasta</fullName>
            </value>
            <value>
                <fullName>Calama</fullName>
            </value>
            <value>
                <fullName>Caleta Buena</fullName>
            </value>
            <value>
                <fullName>Camar</fullName>
            </value>
            <value>
                <fullName>Cañamo</fullName>
            </value>
            <value>
                <fullName>Caramucho</fullName>
            </value>
            <value>
                <fullName>Catarpe</fullName>
            </value>
            <value>
                <fullName>Chanavayita</fullName>
            </value>
            <value>
                <fullName>Colonia de Pintados</fullName>
            </value>
            <value>
                <fullName>Coyo</fullName>
            </value>
            <value>
                <fullName>Cucuter</fullName>
            </value>
            <value>
                <fullName>Guatin</fullName>
            </value>
            <value>
                <fullName>Huatacondo</fullName>
            </value>
            <value>
                <fullName>Iquique</fullName>
            </value>
            <value>
                <fullName>Larache</fullName>
            </value>
            <value>
                <fullName>La Tirana</fullName>
            </value>
            <value>
                <fullName>Machuca</fullName>
            </value>
            <value>
                <fullName>María Elena</fullName>
            </value>
            <value>
                <fullName>Peine</fullName>
            </value>
            <value>
                <fullName>Pozo Almonte</fullName>
            </value>
            <value>
                <fullName>Quillagua</fullName>
            </value>
            <value>
                <fullName>Quitor</fullName>
            </value>
            <value>
                <fullName>Rio Grande</fullName>
            </value>
            <value>
                <fullName>San Pedro de Atacama</fullName>
            </value>
            <value>
                <fullName>Sequitor y Checar</fullName>
            </value>
            <value>
                <fullName>Socaire</fullName>
            </value>
            <value>
                <fullName>Solor</fullName>
            </value>
            <value>
                <fullName>Soncor</fullName>
            </value>
            <value>
                <fullName>Talabre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>